objects/Half_Cluster__c.object
<CustomObject>
    <description>This splits each cluster into its sub components. Previously named Half Cluster as there were thought to be just two halves to each cluster.  For Summer 2016 however, some clusters have 3 sub cluster components, hence the change to the Object Label/record Name.</description>
    <fields>
        <fullName>Cluster_Programme_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster Programme Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Half_Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_Programme_Manager__c</fullName>
        <formula>Cluster__r.PM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Programme Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipName>Half_Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Cluster__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Sub Cluster</label>
    <listViews>
        <fullName>X2017_Sub_Cluster</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Cluster_Programme_Manager__c</columns>
        <columns>Zone__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Half_Cluster__c.X2017</value>
        </filters>
        <label>2017 Sub Cluster</label>
        <sharedTo>
            <group>ProgrammesAll</group>
            <role>Innovation_Associate</role>
            <role>Innovation_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sub Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Clusters</pluralLabel>
    <recordTypes>
        <fullName>X2014</fullName>
        <active>true</active>
        <label>2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015</fullName>
        <active>true</active>
        <label>2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016</fullName>
        <active>true</active>
        <description>New Sub Clusters for 2016</description>
        <label>2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2017</fullName>
        <active>true</active>
        <description>New Sub Clusters for 2017</description>
        <label>2017</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>